syntax = "proto3";
package comdex.rewards.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/rewards/v1beta1/params.proto";
import "comdex/rewards/v1beta1/rewards.proto";
import "comdex/rewards/v1beta1/gauge.proto";
import "comdex/rewards/v1beta1/epochs.proto";

option go_package = "github.com/comdex-official/comdex/x/rewards/types";

// Query defines the gRPC querier service.
service Query {

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/params";
  }
  rpc QueryAllEpochsInfo(QueryAllEpochsInfoRequest) returns (QueryAllEpochsInfoResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/epochs";
  }
  rpc QueryEpochInfoByDuration(QueryEpochInfoByDurationRequest) returns (QueryEpochInfoByDurationResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/epoch_duration/{duration_seconds}";
  }
  rpc QueryAllGauges(QueryAllGaugesRequest) returns (QueryAllGaugesResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/gauges";
  }
  rpc QueryGaugeByID(QueryGaugeByIdRequest) returns (QueryGaugeByIdResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/gauge/{gauge_id}";
  }
  rpc QueryGaugeByDuration(QueryGaugesByDurationRequest) returns (QueryGaugeByDurationResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/gauge_duration/{duration_seconds}";
  }

  rpc QueryRewards(QueryRewardsRequest) returns (QueryRewardsResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/rewards";
  }
  rpc QueryReward(QueryRewardRequest) returns (QueryRewardResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/reward/{id}";
  }
  rpc QueryExternalRewardsLockers(QueryExternalRewardsLockersRequest) returns (QueryExternalRewardsLockersResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/locker_external_rewards";
  }
  rpc QueryExternalRewardVaults(QueryExternalRewardVaultsRequest) returns (QueryExternalRewardVaultsResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/vault_external_rewards";
  }
  rpc QueryWhitelistedAppIdsVault(QueryWhitelistedAppIdsVaultRequest) returns (QueryWhitelistedAppIdsVaultResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/whitelisted_appids_Vault";
  }
  rpc QueryExternalRewardLends(QueryExternalRewardLendsRequest) returns (QueryExternalRewardLendsResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/lend_external_rewards";
  }
  rpc QueryExternalRewardStableMint(QueryExternalRewardStableMintRequest) returns (QueryExternalRewardStableMintResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/stable_mint_external_rewards";
  }
  rpc QueryEpochTime(QueryEpochTimeRequest) returns (QueryEpochTimeResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/epoch_time";
  }
  rpc QueryExtLendRewardsAPR(QueryExtLendRewardsAPRRequest) returns (QueryExtLendRewardsAPRResponse) {
    option (google.api.http).get = "/comdex/rewards/v1beta1/ext_rewards_lend_apr";
  }
}


// PARAMS
message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}


// ALL EPOCHES
message QueryAllEpochsInfoRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}
message QueryAllEpochsInfoResponse {
  repeated EpochInfo epochs = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"epochs\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

// EPOCH BY DURATION
message QueryEpochInfoByDurationRequest {
  uint64 duration_seconds = 1;
}
message QueryEpochInfoByDurationResponse {
  EpochInfo epoch = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"epoch\""];
}

// ALL GAUGES
message QueryAllGaugesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}
message QueryAllGaugesResponse {
  repeated Gauge gauges = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"gauges\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

// GAUGE BY ID
message QueryGaugeByIdRequest {
  uint64 gauge_id = 1;
}
message QueryGaugeByIdResponse {
  Gauge gauge = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"gauge\""];
}

// GAUGE BY TRIIGER DURATION
message QueryGaugesByDurationRequest {
  uint64 duration_seconds = 1;
}
message QueryGaugeByDurationResponse {
  repeated Gauge gauges = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"gauges\""];
}

message QueryRewardsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryRewardsResponse {
  repeated InternalRewards rewards = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"rewards\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryRewardRequest {
  uint64 id = 1;
}

message QueryRewardResponse {
  repeated InternalRewards reward = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"reward\""];
}

// all ExternalRewardsLockers

message QueryExternalRewardsLockersRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardsLockersResponse {
  repeated LockerExternalRewards locker_external_rewards = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"locker_external_rewards\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardVaultsRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardVaultsResponse {
  repeated VaultExternalRewards vault_external_rewards = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"vault_external_rewards\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryWhitelistedAppIdsVaultRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryWhitelistedAppIdsVaultResponse {
  repeated uint64 whitelistedAppIdsVault = 1
  [(gogoproto.moretags) = "yaml:\"whitelistedAppIdsVault\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardLendsRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardLendsResponse {
  repeated LendExternalRewards lend_external_rewards = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"lend_external_rewards\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardStableMintRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExternalRewardStableMintResponse {
  repeated StableVaultExternalRewards stable_mint_external_rewards = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"stable_mint_external_rewards\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryEpochTimeRequest{
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryEpochTimeResponse {
  repeated EpochTime epoch_time = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"epoch_time\""];

  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryExtLendRewardsAPRRequest {
  uint64 asset_id = 1;
  uint64 c_pool_id = 2;
}
message QueryExtLendRewardsAPRResponse {
  string apr = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"ext_rewards_lend_apr\""
  ];
}